--- a/styles/style.css
+++ b/styles/style.css
@@ -34,37 +34,215 @@ li span {
   font-size: 4.5rem;
 }
 
+.image-container {
+  position: absolute;
+  width: 70%;
+  height: auto;
+  max-width: 70%;
+  top: 65%;
+}
+.text-overlay {
+  position: absolute;
+  top: 65%;
+  left: 70%;
+  /* transform: translate(-50%, -50%); */
+  text-align: center;
+  color: white;
+  font-size: 1rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  z-index: 3;
+}
 #birthdayImage {
   width: 70%;
   height: auto;
   max-width: 70%;
   position: absolute;
   top: 65%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 45%;
+  /* transform: translate(-50%, -50%); */
   z-index: 1;
   opacity: 0; 
   transition: opacity 2s ease-in; 
   
 }
+
 @media (max-width: 320px) {
   #birthdayImage {
     width: 80%;
     max-width: 70%;
-    top: 70%;
+    top: 50%;
+    left: 38%;
+  }
+  .image-container {
+    top: 55%;
+  }
+  
+  .text-overlay {
+    left: 64%;
+  }
+
+  .card{    
+    left: 50%;
   }
 }
+  @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+  @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+
+  body {
+    font-family: 'Indie Flower', cursive !important;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  ::selection {
+      background: transparent;
+  }
+
+  h4 {
+  color: #003152;
+      font-size: 26px;
+      line-height: 1px;
+      font-family: 'Amatic SC', cursive !important;
+  }
+
+  .color1{color:#30BA8F}/*MOUNTAIN MEADOW*/
+  .color2{color:#00ADB2/*TALL POPPY*/}
+
+
+  .card {
+      color: #1D2951; /*SHERPA BLUE*/
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 300px;
+      height: 400px;
+      background: #d1ffff;
+      transform-style: preserve-3d;
+      transform: translate(-50%,-50%) perspective(2000px);
+      box-shadow: inset 300px 0 50px rgba(0,0,0,.5), 20px 0 60px rgba(0,0,0,.5);
+      transition: 2s;
+      display: none; /* Hidden initially */
+      opacity: 0; /* Start with opacity 0 */
+      transition: opacity 1.5s ease-in-out; /* Smooth fade-in effect */
+  }
+
+  .card:hover {
+      transform: translate(-50%,-50%) perspective(2000px) rotate(5deg) scale(1.2);
+      box-shadow: inset 20px 0 50px rgba(0,0,0,.5), 0 10px 100px rgba(0,0,0,.5);
+  }
+
+  .card:before {
+      content:'';
+      position: absolute;
+      top: -5px;
+      left: 0;
+      width: 100%;
+      height: 5px;
+      background: #d1ffff;
+      transform-origin: bottom;
+      transform: skewX(-45deg);
+  }
+
+  .card:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -5px;
+      width: 5px;
+      height: 100%;
+      background: #d1ffff;
+      transform-origin: left;
+      transform: skewY(-45deg);
+  }
+
+  .card .imgBox {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-origin: left;
+      transition: .7s;
+  }
+
+  .card .bark {
+      position: absolute;
+      background: #dbffff;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: .7s;
+  }
+
+  .card .imgBox img {
+      min-width: 250px;
+      max-height: 400px;
+  }
+
+  .card:hover .imgBox {
+      transform: rotateY(-135deg);
+  }
+
+  .card:hover .bark {
+      opacity: 1;
+      transition: .6s;
+    box-shadow: 300px 200px 100px rgba(0, 0, 0, .4) inset;
+  }
+
+  .card.active { 
+    /* Menambahkan class active untuk sentuhan perangkat */
+    opacity: 1; 
+    display: block;
+  }
+
+  .card .details {
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-sizing: border-box;
+      padding: 0 0 0 10px;
+      z-index: -1;
+      margin-top: 30px;
+  }
+
+  .card .details p {
+    font-size: 13px;
+    line-height: 5px;
+    padding: 0 20px 0 20px;
+    line-height: 1.5;
+  }
+
+  .card .details h4 {
+      text-align: center;
+  }
+
+  .text-right {
+      text-align: right;
+  }
 
 @media (max-width: 768px) {
   #birthdayImage {
     width: 70%;
-    top: 70%;
+    top: 50%;
+    left: 38%;
   }
+  .text-overlay {
+    left: 64%;
+  }
+  .image-container {
+    top: 55%;
+  }
+  .card{    
+    left: 50%;
+  }
+  
 }
 @media (min-width: 1200px) {
   #birthdayImage {
     width: 30%;
     top: 85%;
+    left: 56.5%;
+  }
+  .card .details p {
+    font-size: 12px;
   }
 }
 
